--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chalk": "^3.0.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "express": "^4.18.2"
   },
   "repository": {
     "type": "git",
