--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
-    "apikey": "",
+    "token": "MTE5ODI0MjgyOTExNDI5NDMyMg.G0Aqo8.yZKlWEvnnzlkv5MweqMfVdoFULP2hPYRKRhv8I",
+    "apikey": "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",
     "channelid": ""
 }
