--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "token": "MTE5ODI0MjgyOTExNDI5NDMyMg.GkyZNR.p-IhH_AI-mP8VxH7tAInDkxKFdw8X3esUTpWWw",
     "apikey": "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",
     "channelid": ""
 }
